--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-/.idea/misc.xml
-/.idea/modules.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/pythonProject-Labyrinthe.iml
-/.idea/vcs.xml
-/.idea/workspace.xml
+/.idea
 /__pycache__
